# weaverstack

./: .gitignore  AGENTS.md  README.md  hatch_build.py  pyproject.toml
backlog/: weaver-architecture-summary.md  weaverstack-step-by-step-implementation-plan.md
deployment/fabric/: environment.yml
docs/: cli-usage.md  fabric-testing.md  handover.md  journal.md  local-setup.md  ses-repository.md  sql-execution.md
examples/: env.yml
src/weaver/: __init__.py  config.py  diagnostics.py  errors.py  hosts.py  locations.py  objects.py  resolution.py  store.py  targets.py  wipe.py
src/weaver/build_bundle/: __init__.py  bundle.py  installer.py  models.py  payloads.py  planner.py  report.py  runtime.py  targets.py
src/weaver/build_bundle/executors/: __init__.py  base.py  folder.py  prune.py  python.py  spark_sql.py  tsql.py
src/weaver/fabric/: __init__.py  auth.py  capacity.py  client.py  environment.py  livy.py  onelake.py  resolution.py  resources.py  runtime.py  session.py  sql.py  store.py
src/weaver/ses/: __init__.py  ddl.py  dependencies.py  graph.py  metadata.py  repository.py  schemas.py  source.py
src/weaver/sql/: __init__.py  authentication.py  connection.py  errors.py  execution.py  pool.py  wipe.py
src/weaver_cli/: __init__.py  __main__.py  main.py
tests/: conftest.py  test_build_bundle_model.py  test_build_failure_paths.py  test_build_installer.py  test_build_planner.py  test_build_projection.py  test_cli.py  test_cli_wipe.py  test_config.py  test_core_boundary.py  test_diagnostics.py  test_environment_definition.py  test_environment_install.py  test_fabric_runtime.py  test_fabric_session.py  test_hosts.py  test_livy_environment.py  test_livy_plumbing.py  test_locations.py  test_neutrality.py  test_objects.py  test_onelake_pagination.py  test_public_api.py  test_resolution.py  test_ses_aliases.py  test_ses_create_ddl.py  test_ses_cross_engine.py  test_ses_dependencies.py  test_ses_dependencies_spark.py  test_ses_dependencies_tsql.py  test_ses_graph.py  test_ses_metadata.py  test_ses_repository.py  test_ses_repository_end_to_end.py  test_ses_schemas.py  test_sql_authentication.py  test_sql_execution.py  test_sql_pool.py  test_sql_resolution.py  test_store.py  (+3 more)
tests/fabric/: conftest.py  sql_support.py  test_build_bundle.py  test_fabric_resources.py  test_fabric_wipe.py  test_livy_import.py  test_onelake_store.py  test_shared_wipe.py  test_warehouse_wipe.py
tests/fixtures/build-lakehouse/: DWG.ActiveCustomer.spark.sql  DWG.ActiveCustomerSummary.spark.sql  Raw__CustomerCsv.py
tests/fixtures/build-lakehouse-warehouse/: DWG__Customer.py  Reporting.CustomerReport.sql
tests/fixtures/build-lakehouse-warehouse/_schemas/: DWG.yml  Reporting.yml
tests/fixtures/build-lakehouse-warehouse/data/: customers.csv
tests/fixtures/build-lakehouse/_schemas/: Raw.yml
tests/fixtures/cross-engine/: Raw__Customer.py  Reporting.CustomerSummary.sql  Sales.CustomerFeature.spark.sql  Sales.Ledger.spark.sql  Sales.Ledger.sql  Sales__Customer.py  Sales__Ledger.py
tests/fixtures/cross-engine/_schemas/: Reporting.yml  Sales.yml
tests/fixtures/local-lakehouse/: build.spark.sql  load.spark.sql
tests/fixtures/sales-etl/: Reporting.OrderReport.sql  Reporting.OrderView.sql  Sales.Customer.sql  Sales.OrderSummary.spark.sql  Sales__Customer.py  Sales__Order.py  Sales__OrderExport.py
tests/fixtures/sales-etl/_helpers/: dates.py
tests/fixtures/sales-etl/_schemas/: Reporting.yml  Sales.yml
tests/fixtures/sql/: warehouse_wipe_fixture.sql
tests/spark/: test_build_bundle_install.py  test_build_runtime.py  test_local_lakehouses.py  test_local_lifecycle.py  test_local_persisted_view.py  test_wipe_delta.py
