[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weaverstack"
dynamic = ["version"]
description = "Central-catalogue data engineering runtime for Microsoft Fabric Lakehouses and Warehouses."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Matthias Wong" }]
keywords = ["fabric", "onelake", "lakehouse", "delta", "warehouse", "etl"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

# What *installed* Weaver needs to run — the packages a Fabric Environment must
# carry. Kept in step with deployment/fabric/environment.yml (a test enforces it)
# so the two definitions cannot drift. Local-only tooling stays in the extras:
#   pyspark/delta   local Delta execution                       -> [spark]
#   pytest          the test suite                              -> [dev]
dependencies = [
    "pyyaml",
    "sqlparse",
    "mssql-python",
]

[project.optional-dependencies]
# Desktop CLI. `weaver install` builds a wheel and talks to Fabric over HTTP, so
# the installer pulls the build frontend and the Fabric HTTP stack. This is the
# one command a friend tester needs: `pip install ".[cli]"`.
cli = [
    "azure-identity>=1.23",
    "requests>=2.31",
    "build>=1.2",
]
# Delta and Spark are released in lockstep: delta-spark 3.2.x needs Spark 3.5.x.
# Ranges rather than pins, so an existing local install is not disturbed.
fabric = [
    "azure-identity>=1.23",
    "requests>=2.31",
]
spark = [
    "pyspark>=3.5,<3.6",
    "delta-spark>=3.2,<3.3",
]
dev = [
    "pytest>=8.4",
    "azure-identity>=1.23",
    "requests>=2.31",
    "pyspark>=3.5,<3.6",
    "delta-spark>=3.2,<3.3",
]

[project.scripts]
weaver = "weaver_cli:main"

[project.urls]
Homepage = "https://github.com/matthias-wong-dev/weaverstack"

# Version comes from Git, not a hand-edited string, so every changed checkout
# builds an identifiable wheel. The scheme (see hatch_build.py) is a public
# timestamped dev version — unique per build and free of the PEP 440 '+' local
# segment that Fabric's Environment upload rejects.
#   clean at tag v0.1.0        -> 0.1.0
#   ahead of / dirtier than it -> 0.1.1.dev<UTC-seconds>
[tool.hatch.version]
source = "code"
path = "hatch_build.py"
expression = "compute_version()"

[tool.hatch.build.targets.wheel]
packages = ["src/weaver", "src/weaver_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "spark: local Spark/Delta tests, need Java 17 (run with: pytest -m spark)",
    "fabric: opt-in Fabric integration tests, need a workspace and a running capacity (run with: pytest -m fabric)",
]
# Default runs stay fast and need no JVM.
addopts = ["-m", "not spark and not fabric"]
